[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/screens/dialogue/ReplyDraggable.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/UI_texture.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5.375 )

[node name="ReplyDraggable" type="NinePatchRect"]
margin_right = 52.0
margin_bottom = 11.0
texture = ExtResource( 3 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
margin_bottom = 2.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelName" type="Label" parent="PanelContainer"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 15.0
text = "Reply name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 39, 8 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -14, -2.375 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 25, 6 )

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_exited"]
